fixing scaling issues on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,7 +250,7 @@ a.btn.btn-outline-secondary {
 }
 .btn-outline-secondary:focus {
   background-color: #68625e;
-  border: #f1ece7:
+  border: #f1ece7;
 }
 
 /* footer styling */
